--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "gitweldShapeArCOTwo",
+  "name": "gitweld011",
   "version": "0.1.0",
   "private": true,
   "description": "create gitweldShapeArCOTwo",
